# adventofcode2021

./: .pre-commit-config.yaml  README.md  advent.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  input_day1.txt  input_day3.txt  input_day5.txt  justfile  pyproject.toml  test_advent.py
