[tool.poetry]
name = "adventofcode2021"
version = "1.0.0"
description = "My Advent of Code 2021 answers '^^"
authors = ["Pierre-Yves Martin <pym.aldebaran@pm.me>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
pytest-sugar = "^0.9.4"
pytest-pudb = "^0.7.0"
xdoctest = "^0.15.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--xdoctest"

[tool.black]
target-version = ['py310']
